# padll

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarking/: bench.sh  padll_scalability_benchmark.cpp
files/: hsk-macro-1  hsk-macro-2  hsk-micro-1  hsk-micro-1-noop  hsk-micro-2  hsk-micro-3  hsk-rules-local  hsk-scale-test  hsk-simple-test
include/ldpaio/interface/: posix_file_system.hpp  posix_passthrough.hpp
include/ldpaio/statistics/: statistic_entry.hpp  statistics.hpp
include/ldpaio/thrid_party/: enum.h  tabulate.hpp
include/ldpaio/utils/: logging.hpp  operation_utils.hpp  options.hpp
include/padll/configurations/: libc_calls.hpp
include/padll/interface/: ld_preloaded_posix.hpp  posix_file_system.hpp  posix_passthrough.hpp
include/padll/interface/ldpreloaded/: dlsym_hook_libc.hpp  ld_preloaded_posix.hpp  libc_dlsym_hook.hpp
include/padll/interface/native/: posix_file_system.bak.hpp  posix_file_system.hpp
include/padll/interface/passthrough/: posix_passthrough.hpp
include/padll/libraries/: libc_enums.hpp  libc_headers.hpp  libc_operation_enums.hpp  libc_operation_headers.hpp
include/padll/library_headers/: libc_enums.hpp  libc_headers.hpp
include/padll/options/: options.hpp
include/padll/stage/: data_plane_stage.hpp  mount_point_differentiation.hpp  mount_point_entry.hpp  mount_point_table.hpp  namespace_differentiation.hpp  namespace_entry.hpp
include/padll/statistics/: statistic_entry.hpp  statistics.hpp
include/padll/thrid_party/: tabulate.hpp
include/padll/utils/: log.hpp  logging.hpp  make_unique.hpp  operation_utils.hpp  options.hpp
notes/: limitations.md  macro-bench-configs.md  micro-bench-configs.md
src/interface/: ld_preloaded_posix.cpp  posix_file_system.cpp  posix_passthrough.cpp
src/interface/ldpreloaded/: ld_preloaded_posix.cpp
src/interface/native/: posix_file_system.cpp
src/interface/passthrough/: posix_passthrough.cpp
src/stage/: data_plane_stage.cpp  mount_point_differentiation.cpp  mount_point_entry.cpp  mount_point_table.cpp  namespace_differentiation.cpp  namespace_entry.cpp
src/statistics/: statistic_entry.cpp  statistics.cpp
src/utils/: log.cpp  logging.cpp
tests/: bench.sh  hybrid_calls_test.cpp  ldpaio_directory_calls_test.cpp  ldpaio_extended_attributes_calls_test.cpp  ldpaio_hybrid_calls_test.cpp  ldpaio_statistics_test.cpp  ldpaio_test.cpp  padll_directory_calls_test.cpp  padll_mount_point_differentiation_test.cpp  padll_paio_integration_test.cpp  padll_simulate_macro_test.cpp  padll_simulate_micro_test.cpp  padll_statistics_test.cpp  padll_test.cpp  padll_xoshiro_test.cpp
tests/posix/: directory_calls_test.cpp  extended_attributes_calls_test.cpp  hybrid_calls_test.cpp  simple_test.cpp  test
